# ChangeLog for dev-ruby/exifr
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/exifr/ChangeLog,v 1.22 2011/07/24 06:03:01 graaff Exp $

  24 Jul 2011; Hans de Graaff <graaff@gentoo.org> -exifr-1.0.4.ebuild:
  Remove old version.

*exifr-1.0.5 (09 Apr 2011)

  09 Apr 2011; Hans de Graaff <graaff@gentoo.org> +exifr-1.0.5.ebuild:
  Version bump.

  09 Apr 2011; Hans de Graaff <graaff@gentoo.org> -exifr-1.0.3.ebuild:
  Remove old version.

*exifr-1.0.4 (23 Feb 2011)

  23 Feb 2011; Hans de Graaff <graaff@gentoo.org> +exifr-1.0.4.ebuild:
  Version bump.

  23 Feb 2011; Hans de Graaff <graaff@gentoo.org> -exifr-1.0.1.ebuild,
  -exifr-1.0.2.ebuild:
  Remove old versions.

*exifr-1.0.3 (18 Sep 2010)

  18 Sep 2010; Hans de Graaff <graaff@gentoo.org> +exifr-1.0.3.ebuild:
  Version bump: more specific exceptions to aid error handling.

*exifr-1.0.2 (06 Aug 2010)

  06 Aug 2010; Hans de Graaff <graaff@gentoo.org> +exifr-1.0.2.ebuild:
  Version bump.

  21 Jun 2010; Hans de Graaff <graaff@gentoo.org> -exifr-1.0.0.ebuild:
  Remove old version.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> exifr-1.0.0.ebuild,
  exifr-1.0.1.ebuild:
  Various cleanups.

  27 Apr 2010; Hans de Graaff <graaff@gentoo.org> -exifr-0.10.9-r1.ebuild:
  Remove old version.

*exifr-1.0.1 (27 Apr 2010)

  27 Apr 2010; Hans de Graaff <graaff@gentoo.org> +exifr-1.0.1.ebuild:
  Version bump: bug fix for 'Unable to properly display
  exposure_bias_value'.

  09 Apr 2010; Hans de Graaff <graaff@gentoo.org> exifr-1.0.0.ebuild:
  test/unit is a build-time dependency.

*exifr-1.0.0 (09 Apr 2010)

  09 Apr 2010; Hans de Graaff <graaff@gentoo.org> +exifr-1.0.0.ebuild:
  Version bump: bug fixes.

*exifr-0.10.9-r1 (01 Feb 2010)

  01 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -exifr-0.10.9.ebuild, +exifr-0.10.9-r1.ebuild:
  Port to fakegem.

  29 Nov 2009; Alex Legler <a3li@gentoo.org> -exifr-0.10.8.ebuild: