@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/exifr
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/exifr/ChangeLog,v 1.22 2011/07/24 06:03:01 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/exifr/ChangeLog,v 1.23 2011/07/24 06:05:49 graaff Exp $
+
+*exifr-1.0.6 (24 Jul 2011)
+
+  24 Jul 2011; Hans de Graaff <graaff@gentoo.org> +exifr-1.0.6.ebuild:
+  Version bump.
 
   24 Jul 2011; Hans de Graaff <graaff@gentoo.org> -exifr-1.0.4.ebuild:
   Remove old version.
